--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,20 @@
         font-size: 2rem;
         color: white;
       }
+      .rtb-block{
+        display: none !important;
+      }
+      @media (min-width: 1200px) {
+        .rtb-block{
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          display: block !important;
+        }
+        #app, .game{
+          padding-bottom: 200px;
+        }
+      }
     </style>
     <script>
 
@@ -117,6 +131,33 @@
     <div id="app">
 
     </div>
+
+
+
+  <!-- Yandex.RTB R-A-518275-2 -->
+  <div id="yandex_rtb_R-A-518275-2"></div>
+  <script type="text/javascript">
+    (function(w, d, n, s, t) {
+      w[n] = w[n] || [];
+      w[n].push(function() {
+        Ya.Context.AdvManager.render({
+          blockId: "R-A-518275-2",
+          renderTo: "yandex_rtb_R-A-518275-2",
+          async: true
+        });
+      });
+      t = d.getElementsByTagName("script")[0];
+      s = d.createElement("script");
+      s.type = "text/javascript";
+      s.src = "//an.yandex.ru/system/context.js";
+      s.async = true;
+      t.parentNode.insertBefore(s, t);
+    })(this, this.document, "yandexContextAsyncCallbacks");
+  </script>
+
+
+
+
     <!-- built files will be auto injected -->
   </body>
 </html>
