Add shop(buy tips)

--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,10 @@
           bottom: 0;
           left: 0;
           display: block !important;
+          z-index: 5;
+        }
+        #app{
+          background-color: rgb(38, 28, 47);
         }
         #app, .game{
           padding-bottom: 200px;
@@ -135,7 +139,7 @@
 
 
   <!-- Yandex.RTB R-A-518275-2 -->
-  <div id="yandex_rtb_R-A-518275-2"></div>
+  <div id="yandex_rtb_R-A-518275-2" class="rtb-block"></div>
   <script type="text/javascript">
     (function(w, d, n, s, t) {
       w[n] = w[n] || [];
