--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,19 @@
   </script>
 
 
-
+  <script src="sw.js" type="text/javascript"></script>
+  <script>
+    if('serviceWorker' in navigator){
+      navigator.serviceWorker
+              .register('sw.js')
+              .then(function(reg) {
+                console.log('Registration succeeded. Scope is ' + reg.scope);
+              })
+              .catch(function(error) {
+                console.error('Trouble with sw: ', error);
+              });
+    }
+  </script>
 
     <!-- built files will be auto injected -->
   </body>
