Fix shop and banner

--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,9 @@
       .rtb-block{
         display: none !important;
       }
+      purchase-dialog{
+        z-index: 10 !important;
+      }
       @media (min-width: 1200px) {
         .rtb-block{
           position: absolute;
@@ -89,6 +92,7 @@
           left: 0;
           display: block !important;
           z-index: 5;
+          max-height: 200px !important;
         }
         #app{
           background-color: rgb(38, 28, 47);
