Switch block to right

--- a/public/index.html
+++ b/public/index.html
@@ -88,17 +88,16 @@
       @media (min-width: 1200px) {
         .rtb-block{
           position: absolute;
-          bottom: 0;
-          left: 0;
+          right: 0;
+          top: 0;
           display: block !important;
           z-index: 5;
-          max-height: 210px !important;
         }
         #app{
           background-color: rgb(38, 28, 47);
         }
-        #app, .game{
-          padding-bottom: 210px;
+        #app{
+          padding-right: 240px;
         }
       }
     </style>
