--- a/public/index.html
+++ b/public/index.html
@@ -88,16 +88,17 @@
       @media (min-width: 1200px) {
         .rtb-block{
           position: absolute;
-          right: 0;
-          top: 0;
+          bottom: 0;
+          left: 0;
           display: block !important;
           z-index: 5;
+          max-height: 210px !important;
         }
         #app{
           background-color: rgb(38, 28, 47);
         }
         #app{
-          padding-right: 240px;
+          padding-bottom: 210px;
         }
       }
     </style>
@@ -141,8 +142,22 @@
 
 
 
-  <!-- Yandex.RTB R-A-518275-2 -->
-  <div id="yandex_rtb_R-A-518275-2" class="rtb-block"></div>
+  <script src="sw.js" type="text/javascript"></script>
+  <script>
+    if('serviceWorker' in navigator){
+      navigator.serviceWorker
+              .register('sw.js')
+              .then(function(reg) {
+                console.log('Registration succeeded. Scope is ' + reg.scope);
+              })
+              .catch(function(error) {
+                console.error('Trouble with sw: ', error);
+              });
+    }
+  </script>
+
+    <!-- built files will be auto injected -->
+
   <script type="text/javascript">
     (function(w, d, n, s, t) {
       w[n] = w[n] || [];
@@ -162,21 +177,5 @@
     })(this, this.document, "yandexContextAsyncCallbacks");
   </script>
 
-
-  <script src="sw.js" type="text/javascript"></script>
-  <script>
-    if('serviceWorker' in navigator){
-      navigator.serviceWorker
-              .register('sw.js')
-              .then(function(reg) {
-                console.log('Registration succeeded. Scope is ' + reg.scope);
-              })
-              .catch(function(error) {
-                console.error('Trouble with sw: ', error);
-              });
-    }
-  </script>
-
-    <!-- built files will be auto injected -->
   </body>
 </html>
