--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
     <link rel="stylesheet" href="reset.min.css">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
 
+
+    <link rel="manifest" href="yandex-manifest.json">
+
+
     <style>
       .pre-download{
         position: absolute;
@@ -85,19 +89,20 @@
       purchase-dialog{
         z-index: 10 !important;
       }
-      @media (min-width: 1200px) {
+      @media (min-width: 1200px) and (min-height: 700px) {
         .rtb-block{
           position: absolute;
           bottom: 0;
           left: 0;
           display: block !important;
-          z-index: 5;
-          max-height: 210px !important;
+          z-index: 6;
+          width: 100%;
+          height: 210px;
         }
         #app{
           background-color: rgb(38, 28, 47);
         }
-        #app{
+        .levels{
           padding-bottom: 210px;
         }
       }
@@ -143,18 +148,6 @@
 
 
   <script src="sw.js" type="text/javascript"></script>
-  <script>
-    if('serviceWorker' in navigator){
-      navigator.serviceWorker
-              .register('sw.js')
-              .then(function(reg) {
-                console.log('Registration succeeded. Scope is ' + reg.scope);
-              })
-              .catch(function(error) {
-                console.error('Trouble with sw: ', error);
-              });
-    }
-  </script>
 
     <!-- built files will be auto injected -->
 
