add discounts and rewarded

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
     <script src="https://yandex.ru/games/sdk/v2"></script>
   </head>
   <body>
-  <img src="../src/assets/game-background.png" style="display: none">
+  <img src="img/game-background.d8667d89.png" style="display: none">
   <div class="pre-download">
     <div class="pre-download__words">
       <div class="pre-download__words__word">
@@ -151,24 +151,6 @@
 
     <!-- built files will be auto injected -->
 
-  <script type="text/javascript">
-    (function(w, d, n, s, t) {
-      w[n] = w[n] || [];
-      w[n].push(function() {
-        Ya.Context.AdvManager.render({
-          blockId: "R-A-518275-2",
-          renderTo: "yandex_rtb_R-A-518275-2",
-          async: true
-        });
-      });
-      t = d.getElementsByTagName("script")[0];
-      s = d.createElement("script");
-      s.type = "text/javascript";
-      s.src = "//an.yandex.ru/system/context.js";
-      s.async = true;
-      t.parentNode.insertBefore(s, t);
-    })(this, this.document, "yandexContextAsyncCallbacks");
-  </script>
 
   </body>
 </html>
