--- a/public/index.html
+++ b/public/index.html
@@ -108,6 +108,7 @@
       var YaGames;
     </script>
     <script src="https://yandex.ru/games/sdk/v2"></script>
+    <script src="wordsId.js"></script>
   </head>
   <body>
   <div class="pre-download">
