--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
     <noscript><div><img src="https://mc.yandex.ru/watch/57682372" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
 
+      <!-- Yandex.RTB -->
+      <script>window.yaContextCb=window.yaContextCb||[]</script>
+      <script src="https://yandex.ru/ads/system/context.js" async></script>
+
 
     <link rel="stylesheet" href="reset.min.css">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
