--- a/public/index.html
+++ b/public/index.html
@@ -114,6 +114,7 @@
     </style>
     <script>
       var YaGames;
+      var openTime = new Date();
     </script>
     <script src="https://yandex.ru/games/sdk/v2"></script>
   </head>
