Add new words, check stat

--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,9 @@
       var openTime = new Date();
     </script>
     <script src="https://yandex.ru/games/sdk/v2"></script>
+      <script>
+          var openTimeAfterSdk = new Date();
+      </script>
   </head>
   <body>
 
