--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         width: 100%;
         height: 100%;
 
-        background-color: #271B2E;
+        background-color: #2a0800;
         font-size: 5rem;
         z-index: 10;
       }
@@ -69,14 +69,14 @@
 
         border-radius: 5px;
 
-        background-color: rgba(166,82,174,0.9);
+        background-color: #C23E1F;
         color: white;
 
         font-size: 3rem;
       }
       .another-letter{
-        background-color: rgba(255, 255, 255, 0.9);
-        color: rgb(150, 74, 157);
+        background-color: white;
+        color: #C23E1F;
       }
       .big-letter{
         width: 60px;
