add new system saving

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
         width: 100%;
         height: 100%;
 
-        background-color: #2a0800;
+        background-color: #282A67;
         font-size: 5rem;
         z-index: 10;
       }
@@ -69,14 +69,14 @@
 
         border-radius: 5px;
 
-        background-color: #C23E1F;
+        background-color: #6c72f0;
         color: white;
 
         font-size: 3rem;
       }
       .another-letter{
         background-color: white;
-        color: #C23E1F;
+        color: #6c72f0;
       }
       .big-letter{
         width: 60px;
