add repeating levels

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
       var YaGames;
       var openTime = new Date();
     </script>
-    <script src="https://yandex.ru/games/sdk/v2"></script>
+      <script src="/sdk.js"></script>
       <script>
           var openTimeAfterSdk = new Date();
       </script>
