--- a/public/index.html
+++ b/public/index.html
@@ -6,30 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Игра для смекалистых! Получите слово и попробуйте создать из его букв как можно больше других слов!">
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
-      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    <% if (PLATFORM === 'yandex') { %>
+      <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+          m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  
+        ym(57682372, "init", {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true
+        });
+      </script>
+      <noscript><div><img src="https://mc.yandex.ru/watch/57682372" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <% } %>
+    
+    <% if (PLATFORM === 'gp') { %>
+      <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+          m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  
+        ym(93160083, "init", {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true
+        });
+      </script>
+      <noscript><div><img src="https://mc.yandex.ru/watch/57682372" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <% } %>
 
-      ym(57682372, "init", {
-        clickmap:true,
-        trackLinks:true,
-        accurateTrackBounce:true
-      });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/57682372" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
 
-      <!-- Yandex.RTB -->
-      <script>window.yaContextCb=window.yaContextCb||[]</script>
-      <script src="https://yandex.ru/ads/system/context.js" async></script>
 
 
     <link rel="stylesheet" href="reset.min.css">
     <link rel="shortcut icon" href="favicon.png" type="image/png">
 
-
-    <link rel="manifest" href="yandex-manifest.json">
+    <% if (PLATFORM === 'yandex') { %>
+      <link rel="manifest" href="yandex-manifest.json">
+    <% } %>
 
 
     <style>
@@ -116,7 +132,13 @@
       var YaGames;
       var openTime = new Date();
     </script>
-      <script src="/sdk.js"></script>
+      <% if (PLATFORM === 'yandex') { %>
+        <script src="/sdk.js"></script>
+      <% } %>
+      
+      <% if (PLATFORM === 'gp') { %>
+        <script src="https://gamepush.com/sdk/gamepush.js?projectId=4627&publicToken=gu4gl5JEKLcVoa4pajOZSYXAaO54oXNl&callback=onGPInit"></script>
+      <% } %>
       <script>
           var openTimeAfterSdk = new Date();
       </script>
@@ -124,7 +146,7 @@
   <body>
 
   <div class="pre-download">
-    <div class="pre-download__words notShow">
+    <div class="pre-download__words">
       <div class="pre-download__words__word">
         <div class="pre-download__words__letter">С</div>
         <div class="pre-download__words__letter">Л</div>
@@ -194,8 +216,10 @@
 
 
 
-
-  <script src="sw.js" type="text/javascript"></script>
+    <% if (PLATFORM === 'yandex') { %>
+      <script src="sw.js" type="text/javascript"></script>
+    <% } %>
+  
 
     <!-- built files will be auto injected -->
   </body>
