--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
       <% } %>
       
       <% if (PLATFORM === 'gp') { %>
-        <script src="https://gamepush.com/sdk/gamepush.js?projectId=4627&publicToken=gu4gl5JEKLcVoa4pajOZSYXAaO54oXNl&callback=onGPInit"></script>
+        <scrip async src="https://gamepush.com/sdk/gamepush.js?projectId=4627&publicToken=gu4gl5JEKLcVoa4pajOZSYXAaO54oXNl&callback=onGPInit"></script>
       <% } %>
       <script>
           var openTimeAfterSdk = new Date();
