--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
           accurateTrackBounce:true
         });
       </script>
-      <noscript><div><img src="https://mc.yandex.ru/watch/57682372" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+      <noscript><div><img src="https://mc.yandex.ru/watch/93160083" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <% } %>
 
     <!-- /Yandex.Metrika counter -->
@@ -135,10 +135,7 @@
       <% if (PLATFORM === 'yandex') { %>
         <script src="/sdk.js"></script>
       <% } %>
-      
-      <% if (PLATFORM === 'gp') { %>
-        <script async src="https://gamepush.com/sdk/gamepush.js?projectId=4627&publicToken=gu4gl5JEKLcVoa4pajOZSYXAaO54oXNl&callback=onGPInit"></script>
-      <% } %>
+
       <script>
           var openTimeAfterSdk = new Date();
       </script>
@@ -219,6 +216,16 @@
     <% if (PLATFORM === 'yandex') { %>
       <script src="sw.js" type="text/javascript"></script>
     <% } %>
+  <% for (const css of htmlWebpackPlugin.files.css) { %>
+  <link rel="stylesheet" href="<%= css %>">
+  <% } %>
+  <% for (const js of htmlWebpackPlugin.files.js) { %>
+  <script src="<%= js %>"></script>
+  <% } %>
+
+  <% if (PLATFORM === 'gp') { %>
+  <script src="https://gamepush.com/sdk/gamepush.js?projectId=4627&publicToken=gu4gl5JEKLcVoa4pajOZSYXAaO54oXNl&callback=onGPInit"></script>
+  <% } %>
   
 
     <!-- built files will be auto injected -->
