--- a/public/index.html
+++ b/public/index.html
@@ -141,7 +141,7 @@
       </script>
   </head>
   <body>
-
+  <canvas id="game" onmousedown="event.preventDefault ? event.preventDefault() : event.returnValue = false" ondragstart="return false;" ondrop="return false;"></canvas>
   <div class="pre-download">
     <div class="pre-download__words">
       <div class="pre-download__words__word">
